--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,9 @@ h4, p, q, small, nav, button, form {
 }
 
 /* ---------Body--------- */
-body a {
+#skip {
     text-decoration: none;
+    opacity: 0;
 }
 
 /* ---------Header--------- */
@@ -112,8 +113,8 @@ nav {
 
 nav a {
     font-weight: bold;
+    font-size: 0.8em;
     text-transform: uppercase ;
-    
 }
 
 nav ul {
@@ -125,7 +126,9 @@ nav ul {
 }
 
 nav li {
-    padding: 15px;
+    padding: 35px;
+    border: solid thin;
+    border-color: var(--dark-gray);
 }
 
 #menu-toggle {
@@ -135,9 +138,41 @@ nav li {
 }
 
 #menu-toggle input {
-    
+    display: none;
 }
 
+#menu-toggle label {
+    background-color: var(--dark-gray);
+    color: var(--white);
+    display: block;
+    padding: 20px 0px;
+    margin: 0;
+    font-size: 1em;
+    text-align: center;
+}
+
+#menu-toggle ul {
+    position: absolute;
+    width: 100%;
+    background-color: var(--teal);
+    color: var(--dark-gray);
+    list-style: none;
+    margin: 0;
+    opacity: 0;
+    visibility: hidden;
+    padding: 0px;
+}
+
+#menu-toggle ul li a {
+    text-decoration: none;
+    display: block;
+    color: var(--black);
+}
+
+#menu-toggle input:checked ~ ul {
+    opacity: 1;
+    visibility: visible;
+}
 /* ---------Main--------- */
 main {
     display: block;
@@ -251,6 +286,11 @@ h3, h2 {
     display: block;
     padding: 20px;
     text-align: center;
+}
+
+#about img {
+    height: 50%;
+    padding: 10px;
 }
 
 /* CONTACT */
