--- a/styles.css
+++ b/styles.css
@@ -455,6 +455,10 @@ h3 {
     max-width: 95%;
 }
 
+p {
+    font-size: 1.5em;
+}
+
 header {
     padding-top: 50px;
     display: grid;
@@ -478,6 +482,7 @@ header p {
     align-items: center;
     width: 100%;
 }
+
 nav {
     display: block;
     width: 90%;
@@ -486,6 +491,7 @@ nav {
     grid-column: 1 / span 2;
     place-self: center;
 }
+
 #menu-toggle ul {
     opacity: 1; 
     background-color: transparent;
@@ -580,6 +586,214 @@ footer{
 
 }
 
-@media only screen and (min-width: 1280) {
+@media only screen and (min-width: 1025px) {
+header {
+    padding-top: 50px;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto ;
+    padding-bottom: 80px;
+}
+
+#logo img{
+    height: 110%;
+}
+    
+header a {
+    grid-row-end: span 2;
+    width: 0px;
+}
+    
+header h1 {
+    font-size: 3.5em;
+}
+
+header p {
+    grid-column: 2;
+    grid-row: 2;
+    font-size: 1.5em;
+}
+    
+#menu-toggle {
+    position: relative;
+    grid-column: auto;
+    align-items: center;
+    width: 100%;
+}
+    
+nav {
+    display: block;
+    position: absolute;
+    top: -10px;
+    width: 60%;
+    padding: 0px;
+    background-color: transparent;
+    grid-column: 3 / span 4;
+    right: 0px;
+}
+    
+#menu-toggle ul {
+    opacity: 1; 
+    position: absolute;
+    background-color: transparent;
+    z-index: 200;
+    visibility: visible;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+    
+#menu-toggle li {
+    background-color: var(--white);
+    padding: 15px;
+    width: 20%;
+    margin: 0px;
+    margin-left: 10px;
+    margin-right: 0px;
+    border: none;
+}
+    
+#menu-toggle label {
+    display: none;
+}
+    
+#menu-toggle li:hover {
+    background-color: var(--yellow);
+}
+
+#intro {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+#intro p {
+    display: flex;
+    grid-row: 2;
+    columns: 2;
+}
+
+#img-grid {
+    display: grid;
+    max-width: 100vw;
+    padding: 30px;
+    padding-top: 10px;
+    row-gap: 10px;
+    column-gap: 10px;
+    grid-row: 1 / span 3;
+}
+
+#img-grid img{
+    width: 100%;
+}
+
+picture {
+    grid-column: 1 / span 2;
+}
+
+#plan div {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 40px;
+}
+
+#testimonials div{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#testimonials section{
+    width: 20%;
+}
+
+#about div {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#about img{
+   width: 70%;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-content: center;
+    padding: 30px;
+}
+
+form div {
+    display: block;
+}
+
+#names, #nums, #select {
+    display: flex;
+    flex-direction: column;
+}
+
+#names input {
+    margin-top: 0;
+    border-width: thick;
+}
+
+#nums input {
+    border-width: thick;
+    margin-top: 0;
+}
+
+#selects input {
+    margin-top: 0;
+}
+
+fieldset label, input {
+    width: fit-content;
+    justify-content: center;
+    margin-right: 15px;
+    padding-left: 20px;
+}
+
+fieldset {
+    display: flex;
+    width: 90%;
+    margin-bottom: 0px;
+}
+
+form input {
+    width: 80%;
+}
+
+#selects input {
+    width: 30%;
+    margin-right: 10%;
+    position: relative;
+    float: right;
+    font-size: 1em;
+}
+
+#selects select {
+    width: 90%;
+    border-width: thick;
+    height: 60px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+
+footer {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 1fr ;
+    grid-template-areas: "box 1", "box 5", "box6";
+}
+
+footer p {
+    grid-column: 1 / span 2;
+    text-align: left;
+}
+
+footer a {
+    text-align: right;
+}
 
 }
